[metadata]
name = pyradios
version = attr: pyradios.__version__
url = https://github.com/andreztz/pyradios
author = André P. Santos
author_email = andreztz@gmail.com
description = Python client for the http://www.radio-browser.info/webservice
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.6
    Operating System :: OS Independent
    Intended Audience :: Developers
project_urls =
    Source = https://github.com/andreztz/pyradios
    Upstream = https://api.radio-browser.info/

[options]
python_requires = >=3.6
packages = find:
install_requires = 
    requests >= 2.22.0
    appdirs >= 1.4.3
